--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ fieldset {
     -moz-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
     margin: 0 auto 48px auto;
-    width: 640px;
+    width: 90%;
     word-wrap: break-word;
 }
 
