--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,34 +12,27 @@
 a {
     text-decoration: none;
 }
-
 a:active {
     color: #BA2C45;
 }
-
 a:hover {
     color: #BA2C45;
 }
-
 a:link {
     color: #BA2C45;
 }
-
 a:visited {
     color: #BA2C45;
 }
-
 body {
     background-color: rgb(123, 203, 78);
     font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
     margin: 0;
 }
-
 fieldset {
     margin-bottom: 15px;
     padding-top: 15px;
 }
-
 footer {
     font-size: 8px;
     font-style: italic;
@@ -48,7 +41,6 @@ footer {
     padding-top: 17px;
     text-align: right;
 }
-
 h1 {
     font-family: inherit;
     font-size: 34px;
@@ -56,7 +48,6 @@ h1 {
     margin-bottom: 16px;
     margin-top: 0;
 }
-
 h2 {
     font-family: inherit;
     font-size: 16px;
@@ -64,7 +55,6 @@ h2 {
     margin-bottom: 16px;
     margin-top: 16px;
 }
-
 h3 {
     font-family: inherit;
     font-size: 13px;
@@ -72,16 +62,15 @@ h3 {
     margin-bottom: 0;
     margin-top: 16px;
 }
-
 img {
     vertical-align: middle;
 }
-
+legend {
+}
 li {
     font-family: inherit;
     margin-bottom: 16px;
 }
-
 ol {
     font-family: inherit;
     font-size: 13px;
@@ -89,15 +78,13 @@ ol {
     padding-left: 34px;
     padding-right: 34px;
 }
-
 p {
     font-family: inherit;
-    font-size: 13px;
-    margin-bottom: 0;
+    font-size: inherit;
+    margin-bottom: 13px;
     margin-top: 0;
     white-space: pre-wrap;
 }
-
 ul {
     font-family: inherit;
     font-size: 13px;
@@ -122,7 +109,6 @@ ul {
     padding-left: 8%;
     padding-top: 35px;
 }
-
 .viewInCard {
     background-color: #fff;
     -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
@@ -132,12 +118,10 @@ ul {
     width: 90%;
     word-wrap: break-word;
 }
-
 .accentLine {
     background-color: rgb(255, 139, 0);
     height: 8px;
 }
-
 .viewContent {
     padding: 34px;
 }
