Added name field to retrieve data on server

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,11 @@ h3 {
 img {
     vertical-align: middle;
 }
+input[type=text] {
+    width: 100%;
+    padding: 5px 0;
+    text-indent: 5px;
+}
 li {
     font-family: inherit;
     margin-bottom: 16px;
