--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,9 @@ h3 {
 img {
     vertical-align: middle;
 }
+input[type=file] {
+    padding-bottom: 15px;
+}
 input[type=text] {
     width: 100%;
     padding: 5px 0;
